# nexcore-lex-primitiva

./: CLAUDE.md  Cargo.toml  README.md
proofs/: DAG_PROOF.md  lex_primitiva_proof.ipynb
proofs/.ipynb_checkpoints/: executed_proof-checkpoint.ipynb  lex_primitiva_proof-checkpoint.ipynb
src/: bedrock.rs  cli.rs  complexity.rs  composition.rs  composition_proofs.rs  compound.rs  compound_detector.rs  constants.rs  core_true_proofs.rs  dominant_shift.rs  dossier.rs  external_grounding.rs  extraction.rs  grammar.rs  graph.rs  grounding.rs  lib.rs  meta_types.rs  molecular_weight.rs  prelude.rs  primitiva.rs  semantic_path.rs  spatial_bridge.rs  state_mode.rs  symbols.rs  synthesizer.rs  tier.rs  transfer.rs  validate.rs  validation.rs  vocabulary.rs  weighted.rs
