
[package]
name = "nexcore-lex-primitiva"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "The 16 irreducible Lex Primitiva symbols with mathematical constants grounding"
license = "MIT"
repository = "https://github.com/nexvigilant/nexcore"
keywords = ["primitives", "type-theory", "grounding", "mathematics"]
categories = ["data-structures", "mathematics"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "lex-primitiva"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
clap = { version = "4.5.11", features = ["derive", "cargo", "env"] }

[dev-dependencies]
stem-math = { version = "0.1.0", path = "../stem-math", registry = "nexcore" }
proptest = { version = "1.6.0" }

[lints]
workspace = true
